@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6215 2004/06/15 14:27:38 grant Exp $
+$NetBSD: CHANGES,v 1.6216 2004/06/15 17:12:13 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2950,3 +2950,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated xmill to 0.9.1nb1 [minskim 2004-06-15]
 	Updated kmymoney2 to 0.6 [markd 2004-06-15]
 	Updated smpeg to 0.4.4nb6 [grant 2004-06-15]
+	Updated mrtg to 2.0.13nb1 [xtraeme 2004-06-15]
